--- a/Untitled Folder/Untitled.ipynb
+++ b/Untitled Folder/Untitled.ipynb
@@ -2,28 +2,30 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "899771c4",
+   "execution_count": 2,
+   "id": "f25fa561",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (2828734611.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Input \u001b[1;32mIn [1]\u001b[1;36m\u001b[0m\n\u001b[1;33m    hello world\u001b[0m\n\u001b[1;37m          ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'hello world !'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
+    "\"hello world !\"\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4219f050",
+   "id": "edc46c4d",
    "metadata": {},
    "outputs": [],
    "source": []
