--- a/python module - 2.ipynb
+++ b/python module - 2.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "94123845",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a number :3\n",
+      "It is a positive number\n"
+     ]
+    }
+   ],
    "source": [
     "#01\n",
     "\n",
@@ -86,10 +95,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "3870637b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the first number : 23\n",
+      "Enter the second number :45\n",
+      "num_1 = 23\n",
+      "num_2 = 45\n",
+      "num_1 after swapping = 45\n",
+      "num_2 after swapping = 23\n"
+     ]
+    }
+   ],
    "source": [
     "#06\n",
     "#Write a programe to swap th two numbers\n",
@@ -172,7 +194,7 @@
     "or their difference is equal to 5\"\"\" \n",
     "num_1 = int(input(\"Enter a numer 1 : \"))\n",
     "num_2 = int(input(\"Enter a numer 2 : \"))\n",
-    "if (num_1 == num_2 or (num_1 + num_2) == 5 or (num_1 - num_2) == 5 or (num_2 - num_1) == 5):\n",
+    "if (num_1 == num_2) or (num_1 + num_2) == 5 or (num_1 - num_2) == 5 or (num_2 - num_1) == 5):\n",
     "    print(\"True\")\n",
     "else:\n",
     "    pass"
@@ -180,10 +202,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "0444ebd5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "The sum of first 4 positive number is : 10\n"
+     ]
+    }
+   ],
    "source": [
     "#11\n",
     "#Find the sum of first n positive numbers\n",
@@ -402,19 +433,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "6474c28c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the size of the list : 3\n",
+      "Enter the number : 34\n",
+      "Enter the number : 45\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute 'append'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [4]\u001b[0m, in \u001b[0;36m<cell line: 5>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m (size):\n\u001b[0;32m      6\u001b[0m     elements \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m(\u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEnter the number : \u001b[39m\u001b[38;5;124m\"\u001b[39m))\n\u001b[1;32m----> 7\u001b[0m     \u001b[43mlist_1\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mappend\u001b[49m(elements)\n\u001b[0;32m      8\u001b[0m     list_1 \u001b[38;5;241m=\u001b[39m list_1\u001b[38;5;241m.\u001b[39msort()\n\u001b[0;32m      9\u001b[0m second_smallest_number \u001b[38;5;241m=\u001b[39m list_1[\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m2\u001b[39m]\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'append'"
+     ]
+    }
+   ],
+   "source": [
+    "#15 Write a programe to find the second smallest number from the list\n",
+    "\n",
+    "list_1 = []\n",
+    "size = int(input(\"Enter the size of the list : \"))\n",
+    "for i in range (size):\n",
+    "    elements = int(input(\"Enter the number : \"))\n",
+    "    list_1.append(elements)\n",
+    "    list_1 = list_1.sort()\n",
+    "second_smallest_number = list_1[-2]\n",
+    "\n",
+    "print = (second_smallest_number)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "f606187f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'hello': 3, 'bha': 3, 'hdd': 2, 'fgd': 2}\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [\"hello\",\"bha\",\"hello\",\"hdd\",\"bha\",\"fgd\",\"hello\"]\n",
+    "b = []\n",
+    "d = {}\n",
+    "for i in a:\n",
+    "    if i not in b:\n",
+    "        b.append(i)\n",
+    "        c = 0\n",
+    "        d[i] = c\n",
+    "    c += 1\n",
+    "    d[i] = c+1\n",
+    "print(d)"
+   ]
   },
   {
    "cell_type": "code",
